<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="Cal">Cal</string>
    <string name="open_parentheses"><![CDATA[&#x28;]]></string>
    <string name="close_parentheses"><![CDATA[&#x29;]]></string>
    <string name="plus"><![CDATA[&#x2b;]]></string>
    <string name="minus"><![CDATA[&#x2212;]]></string>
    <string name="multiplication"><![CDATA[&#xd7;]]></string>
    <string name="division"><![CDATA[&#xf7;]]></string>
    <string name="equal"><![CDATA[&#x3d;]]></string>
    <string name="delete">&#x232b;</string>
    <string name="numZero">0</string>
    <string name="numOne">1</string>
    <string name="numTwo">2</string>
    <string name="numThree">3</string>
    <string name="numFour">4</string>
    <string name="numFive">5</string>
    <string name="numSix">6</string>
    <string name="numSeven">7</string>
    <string name="numEight">8</string>
    <string name="numNine">9</string>
    <string name="dot">.</string>
</resources>