<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_drawable"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result_value"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:ems="15"
        android:backgroundTint="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"

        android:background="@drawable/result_values_drawable"
        android:textSize="34sp"

        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"

        android:rowCount="6"
        android:columnCount="4"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_value">

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="220dp"
            android:layout_height="50dp"

            android:layout_row="0"
            android:layout_column="2"

            android:layout_marginTop="10dp"

            android:layout_marginBottom="7dp"
            android:background="@drawable/button_style_drawable"
            android:text="@string/delete" />

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="70dp"
            android:layout_height="50dp"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="7dp"

            android:layout_row="1"
            android:layout_column="0"

            android:background="@drawable/button_style_drawable"
            android:text="@string/Cal" />

        <Button
            android:id="@+id/open_parentheses_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"

            android:layout_marginEnd="8dp"


            android:layout_row="1"
            android:layout_column="1"

            android:background="@drawable/button_style_drawable"
            android:text="@string/open_parentheses" />

        <Button
            android:id="@+id/close_parentheses_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"

            android:layout_marginEnd="8dp"

            android:layout_row="1"
            android:layout_column="2"

            android:background="@drawable/button_style_drawable"
            android:text="@string/close_parentheses" />

        <Button
            android:id="@+id/plus_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"

            android:layout_marginEnd="8dp"

            android:layout_row="1"
            android:layout_column="3"

            android:background="@drawable/button_style_drawable"
            android:text="@string/plus" />

        <Button
            android:id="@+id/minus_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@drawable/button_style_drawable"
            android:text="@string/minus" />

        <Button
            android:id="@+id/multiplication_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@drawable/button_style_drawable"
            android:text="@string/multiplication" />

        <Button
            android:id="@+id/division_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_row="4"
            android:layout_column="3"
            android:background="@drawable/button_style_drawable"
            android:text="@string/division" />

        <Button
            android:id="@+id/equal_btn"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_row="5"
            android:layout_column="3"
            android:background="@drawable/button_style_drawable"
            android:text="@string/equal" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
